--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documents</title>
+    <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title>
 </head>
 <body>
-    <h1>Welcome to my WDD230 Projects with instructor Gerald Pierce</h1>
+    <h1>Mackison Jean Pierre</h1>
+    <nav>
+        <a href="styles/base.css">01 Learning Activities</a>
+    </nav>
+
+
+    <footer>
+    <p>&copy;2023</p>
+    <p>Mackison Jean Pierre - WDD230</p>
+    <p>Turkey</p>
+    </footer>  
+
+</body>
+</html>
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title>
+</head>
+<body>
+    <h1>Mackison Jean Pierre - WDD230 Web Fronted Development</h1>
     <nav>
         <a href="week01/holygrail.html">01 Learning Activities</a>
     </nav>
@@ -14,4 +41,10 @@
     <p>&copy;Mackison Jean Pierre - WDD230</p>
 
 </body>
-</html>
+</html> -->
+
+
+
+
+
+
