--- a/index.html
+++ b/index.html
@@ -3,45 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title>
+    <title>Mackison Jean Pierre - WDD230 - Web Development 1</title>
+    <link rel="stylesheet"  href="styles/base.css">
+    <!-- <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title> -->
 </head>
 <body>
-    <h1>Mackison Jean Pierre</h1>
-    <nav>
-        <a href="styles/base.css">01 Learning Activities</a>
+    <header>
+        <img class="header-image" src="images/myphoto.PNG" alt="Mackison Jean Pierre" width="200" height="300">
+        <h1>Mackison Jean Pierre</h1>
+    </header>
+    
+    <!-- This is the navigation links -->
+    <nav class="vertical-nav">
+        <!-- <ul>
+            <a href="#">Home</a> <br>
+            </li><a href="#">Site Plan</a></li
+            <li></li><a href="#">Chamber</a></li>
+            <li></li><a href="#">BYU-Idaho</a></li>
+            <li></li><a href="#">Scripture</a></li>
+        </ul>  -->
+            <a href="#">Home</a>
+            <a href="#">Site Plan</a>
+            <a href="#">Chamber</a>
+            <a href="#">BYU-Idaho</a>
+            <a href="#">Scripture</a>
     </nav>
 
+    <main>
+        <h2>WDD 230: Web Fronted Development</h2> <hr>
+
+        <!--Learning Activities Section-->
+        <section class="card">
+            <h3>Learning Activities</h3>
+
+            <!--activities that will be populated throughout the the course.-->
+            <ul id="learning-activities-list">
+                <li><a href="week01/holygrail.html">Activity 1 | Learning and Quiz</a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </section>
+
+        <!--Information needed-->
+        <section class="card">
+            <h3>Information</h3>
+            <p>Port-au-Prince, Haiti</p>
+            <p>☀️ 21 &deg;C - Sunny</p>
+            <p>Page visits: </p> <hr>
+        </section>
+    </main>
+
+
+    <!-- <footer>
+        <p>&copy;<span id="currentYear"></span></p> 
+        <p id="currentYear"></p>
+        <P>Mackison Jean Pierre</P> 
+        <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20px"> </P>
+        Last Modified Information
+        <p id="lastModified"></p>
+    </footer>   -->
 
     <footer>
-    <p>&copy;2023</p>
-    <p>Mackison Jean Pierre - WDD230</p>
-    <p>Turkey</p>
+        <!-- <p>&copy;<span id="currentYear"></span></p> -->
+        <!-- <p id="copyright">&copy;</p> -->
+        <p>&copy; <span id="copyright"></span></p>
+        <P>Mackison Jean Pierre</P> 
+        <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20"></P>
+        <p id="lastModified"></p>
     </footer>  
+
+
+    <script src="scripts/getdates.js">
+        
+    </script>
 
 </body>
 </html>
 
 
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title>
-</head>
-<body>
-    <h1>Mackison Jean Pierre - WDD230 Web Fronted Development</h1>
-    <nav>
-        <a href="week01/holygrail.html">01 Learning Activities</a>
-    </nav>
-
-    <p>&copy;Mackison Jean Pierre - WDD230</p>
-
-</body>
-</html> -->
 
 
 
