--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Social Media-->
+    <meta property="og:url" content="https://24on7store.github.io/wdd230/">
     <title>Mackison Jean Pierre - WDD230 - Web Development 1</title>
+<!--     
+    <link rel="stylesheet" href="styles/custom-normalization.css"> -->
+    <link rel="stylesheet" href="styles/normalize.css">
+
     <link rel="stylesheet"  href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+
+    <link rel="icon" type="image/x-icon" href="/images/homepage.webp">
     <!-- <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title> -->
 </head>
 <body>
     <header>
-        <img class="header-image" src="images/myphoto.PNG" alt="Mackison Jean Pierre" width="200" height="300">
+        <img class="header-image" src="images/myphoto.PNG" alt="Mackison Jean Pierre">
         <h1>Mackison Jean Pierre</h1>
     </header>
     
@@ -17,7 +26,7 @@
     <nav class="vertical-nav">
         <!-- <ul>
             <a href="#">Home</a> <br>
-            </li><a href="#">Site Plan</a></li
+            </li><a href="#">Site Plan</a></li>
             <li></li><a href="#">Chamber</a></li>
             <li></li><a href="#">BYU-Idaho</a></li>
             <li></li><a href="#">Scripture</a></li>
@@ -28,9 +37,10 @@
             <a href="#">BYU-Idaho</a>
             <a href="#">Scripture</a>
     </nav>
+    <h2>WDD 230: Web Fronted Development</h2> <hr>
 
     <main>
-        <h2>WDD 230: Web Fronted Development</h2> <hr>
+        <!-- <h2>WDD 230: Web Fronted Development</h2> <hr> -->
 
         <!--Learning Activities Section-->
         <section class="card">
@@ -39,7 +49,7 @@
             <!--activities that will be populated throughout the the course.-->
             <ul id="learning-activities-list">
                 <li><a href="week01/holygrail.html">Activity 1 | Learning and Quiz</a></li>
-                <li><a href=""></a></li>
+                <li><a href="home-page.html">Update your Home Page/a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
@@ -58,7 +68,7 @@
             <h3>Information</h3>
             <p>Port-au-Prince, Haiti</p>
             <p>☀️ 21 &deg;C - Sunny</p>
-            <p>Page visits: </p> <hr>
+            <p>Page visits: </p>
         </section>
     </main>
 
