--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
             <!--activities that will be populated throughout the the course.-->
             <ul id="learning-activities-list">
                 <li><a href="week01/holygrail.html">Activity 1 | Learning and Quiz</a></li>
-                <li><a href="home-page.html">Update your Home Page/a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="home-page.html">Update your Home Page</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
             </ul>
         </section>
 
