--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!--activities that will be populated throughout the the course.-->
             <ul id="learning-activities-list">
                 <li><a href="week01/holygrail.html">Activity 1 | Learning and Quiz</a></li>
-                <li><a href="home-page.html">Update your Home Page</a></li>
+                <li><a href="lesson02/design-principle.html">Design Prinsiples Documents</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
