week 02 design principles

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <header>
         <img class="header-image" src="images/myphoto.PNG" alt="Mackison Jean Pierre">
         <h1>Mackison Jean Pierre</h1>
+        <!--adding a button for the hamburger menu-->
+        <button id="hamburger-button">&#8801</button>
     </header>
     
     <!-- This is the navigation links -->
@@ -89,12 +91,12 @@
         <P>Mackison Jean Pierre</P> 
         <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20"></P>
         <p id="lastModified"></p>
-    </footer>  
+    </footer>
 
 
-    <script src="scripts/getdates.js">
-        
-    </script>
+
+    <script src="scripts/getdates.js" defer></script>
+    <script src="scripts/hamburger-menu.js" defer></script>
 
 </body>
 </html>
