--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li></li><a href="#">Scripture</a></li>
         </ul>  -->
             <a href="#">Home</a>
-            <a href="#">Site Plan</a>
+            <a href="lesson03/chamber-site-plan.html">Site Plan</a>
             <a href="#">Chamber</a>
             <a href="#">BYU-Idaho</a>
             <a href="#">Scripture</a>
@@ -52,7 +52,7 @@
             <ul id="learning-activities-list">
                 <li><a href="week01/holygrail.html">Activity 1 | Learning and Quiz</a></li>
                 <li><a href="lesson02/design-principle.html">Design Prinsiples Documents</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
