--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Grand-Goave Chamber of Commerce Site Plan</h1>
-        <h2>Mackison Jean Pierre</h2>
-        <h2>WDD 230</h2>
+        <h1>Grand-Goave</h1> 
+        <h2>Chamber of Commerce Site Plan</h2>
+        <!-- <h2>Mackison Jean Pierre</h2>
+        <h2>WDD 230</h2> -->
     </header>
+    <main>
 
     <section id="site-purpose">
         <h2>Purpose</h2>
-        The Carlsbad Chamber of Commerce acts as a regional economic catalyst,
-        leadership convener, and community champion. We promote business through
+        The Carlsbad Chamber of Commerce acts as a regional economic catalyst,<br>
+        leadership convener, and community champion. <br> We promote business through <br>
         that balances economic prosperity.</p>
-        <p>Our website serves to provide information on local businesses,
-        economic development initiatives, community events, and resources
+        <p>Our website serves to provide information on local businesses,<br>
+        economic development initiatives, community events, and resources<br>
         for both residents and businesses.</p>
     </section>
 
@@ -40,15 +42,63 @@
         <!--Used  for special circumstances or sections as needed-->
         <p>Secondary Font: 'Open Sans', Sans-serif 
         (Used  for special circumstances or sections as needed)</p>
+
+        <!-- <table class="table-class">
+            <tr>
+                <th>Primary</th>
+                <th>Secondary</th>
+                <th>Accent1</th>
+                <th>Accent</th>
+            </tr>
+        </table> -->
     </section>
+
+
+
+    <p>Palette URL:</p>
+    <a href="https://coolors.co/03045e-023e8a-0077b6-0096c7-00b4d8-48cae4-90e0ef-010b13-ffffff"
+    target="_blank">https://coolors.co/03045e-023e8a-0077b6-0096c7-00b4d8-48cae4-90e0ef-010b13-ffffff</a>
+    <section class="table-style">
+    <table class="table-classe">
+        <tr class="first-row">
+            <th>Primary</th>
+            <th>Secondary</th>
+            <th>Accent 1</th>
+            <th>Accent 2</th>
+        </tr>
+
+        <tr>
+            <td class="primary">00000</td>
+            <td class="secondary">00000</td>
+            <td class="accent1">00000</td>
+            <td class="accent2">00000</td>
+        </tr>
+    </table>
+    </section>
+
+    <h3>Typography</h3>
+    <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
+
+    <h4>
+    Heading Font: Roboto Slab
+    <!-- change this -->
+    </h4>
+    <h4>
+    Paragraph Font: Nunito
+    <!-- change this -->
+
+
     <section id="wireframe">
         <h2>Wireframe</h2>
-        <img src="images/homewireframe.png" alt="My wireframe picture">
+        <img src="images/chamberwireframesp.png" alt="My wireframe picture">
     </section>
 
     <footer>
         <p>&copy; Mackison Jean Pierre| 2024 Grand-Goave Chamber of Commerce. All rights reserved.</p>
     </footer>
+
+
+</main>
     
 </body>
 </html>
