remove the wireframe blue background

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -97,14 +97,14 @@
         <!-- change this -->
 
 
-        <!-- <section id="wireframe">
+        <section id="wireframe">
             <h2>Wireframe</h2>
             <img src="images/chamberwireframesp.png" alt="My wireframe picture">
-        </section> -->
+        </section>
 
 <footer>
-    <h2>Wireframe</h2>
-    <img src="images/chamberwireframesp.png" alt="My wireframe picture">
+    <!-- <h2>Wireframe</h2>
+    <img src="images/chamberwireframesp.png" alt="My wireframe picture"> -->
     <p>&copy; Mackison Jean Pierre| 2024 Grand-Goave Chamber of Commerce. All rights reserved.</p>
 </footer>
 
