--- a/home-page.html
+++ b/home-page.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/normalize.csss">
+
+    <link rel="stylesheet"  href="styles/basse.css">
+    <link rel="stylesheet" href="styles/larger.csss">
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <nav class="navbar">
+            <a href="#" class="nav-branding">DEV.</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Site Plan</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Chamber</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">BYU-Idaho</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Scripture</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
+        </nav>
+    </header>
+
+
     
+    
+    <script src="scripts/hamburger-menu.js"></script>
 </body>
 </html>
