--- a/index.html
+++ b/index.html
@@ -5,50 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Social Media-->
     <meta property="og:url" content="https://24on7store.github.io/wdd230/">
-    <title>Mackison Jean Pierre - WDD230 - Web Development 1</title>
-<!--     
-    <link rel="stylesheet" href="styles/custom-normalization.css"> -->
     <link rel="stylesheet" href="styles/normalize.css">
-
     <link rel="stylesheet"  href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-
-    <link rel="icon" type="image/x-icon" href="/images/homepage.webp">
-    <!-- <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title> -->
+    <title>Mackison Jean Pierre - WDD230 - Web Development 1</title>
+    <!-- <link rel="icon" type="image/x-icon" href="/images/homepage.webp"> -->
 </head>
 <body>
     <header>
-        <img class="header-image" src="images/myphoto.PNG" alt="Mackison Jean Pierre">
-        <h1>Mackison Jean Pierre</h1>
+        <!-- <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title> -->
+    <section class="pic-and-h1">
+    <img class="header-image" src="images/myphoto.PNG" alt="Mackison Jean Pierre">
+    <h1>Mackison Jean Pierre</h1>
+    </section>
         <!--adding a button for the hamburger menu-->
-        <button id="hamburger-button">&#8801</button>
-    </header>
-    
-    <!-- This is the navigation links -->
-    <nav class="vertical-nav">
-        <!-- <ul>
-            <a href="#">Home</a> <br>
-            </li><a href="#">Site Plan</a></li>
-            <li></li><a href="#">Chamber</a></li>
-            <li></li><a href="#">BYU-Idaho</a></li>
-            <li></li><a href="#">Scripture</a></li>
-        </ul>  -->
-            <a href="#">Home</a>
-            <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-            <a href="#">Chamber</a>
-            <a href="#">BYU-Idaho</a>
-            <a href="#">Scripture</a>
-    </nav>
-    <h2>WDD 230: Web Fronted Development</h2> <hr>
+        <!-- <button id="hamburger-button">&#8801</button> -->
 
+    <!-- <header> -->
+        <nav class="navbar">
+            <a href="#" class="nav-branding"></a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Site Plan</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Chamber</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">BYU-Idaho</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Scripture</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header> 
+
+
+    <!-- <h2>WDD 230: Web Fronted Development</h2> -->
     <main>
-        <!-- <h2>WDD 230: Web Fronted Development</h2> <hr> -->
-
-        <!--Learning Activities Section-->
-        <section class="card">
+        <h2>WDD 230: Web Fronted Development</h2>
+        <section class="card">  
             <h3>Learning Activities</h3>
-
-            <!--activities that will be populated throughout the the course.-->
             <ul id="learning-activities-list">
                 <li><a href="week01/holygrail.html">Activity 1 | Learning and Quiz</a></li>
                 <li><a href="lesson02/design-principle.html">Design Prinsiples Documents</a></li>
@@ -65,7 +71,8 @@
             </ul>
         </section>
 
-        <!--Information needed-->
+
+
         <section class="card">
             <h3>Information</h3>
             <p>Port-au-Prince, Haiti</p>
@@ -75,18 +82,7 @@
     </main>
 
 
-    <!-- <footer>
-        <p>&copy;<span id="currentYear"></span></p> 
-        <p id="currentYear"></p>
-        <P>Mackison Jean Pierre</P> 
-        <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20px"> </P>
-        Last Modified Information
-        <p id="lastModified"></p>
-    </footer>   -->
-
     <footer>
-        <!-- <p>&copy;<span id="currentYear"></span></p> -->
-        <!-- <p id="copyright">&copy;</p> -->
         <p>&copy; <span id="copyright"></span></p>
         <P>Mackison Jean Pierre</P> 
         <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20"></P>
@@ -95,8 +91,8 @@
 
 
 
-    <script src="scripts/getdates.js" defer></script>
-    <script src="scripts/hamburger-menu.js" defer></script>
+    <!-- <script src="scripts/getdates.js" defer></script> -->
+    <script src="scripts/hamburger-menu.js"></script>
 
 </body>
 </html>
