--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>Learning Activities</h3>
             <ul id="learning-activities-list">
                 <li><a href="week01/holygrail.html">Activity 1 | Learning and Quiz</a></li>
-                <li><a href="lesson02/design-principle.html">Design Prinsiples Documents</a></li>
+                <li><a href="lesson02/design-principles.html">Design Principles Documents</a></li>
                 <li><a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
