--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber Site Plan</title>
     <link rel="stylesheet" href="styles/chamber-site-plan.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Martel&family=Roboto&display=swap">
 </head>
 <body>
     <header>
@@ -87,6 +88,8 @@
         </section>
 
         <h3>Typography</h3>
+        <a href="https://fonts.googleapis.com/css2?family=Martel&family=Roboto&display=swap"
+        target="_blank">https://fonts.googleapis.com/css2?family=Martel&family=Roboto&display=swap"</a>
         <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
         <h4>
