--- a/index.html
+++ b/index.html
@@ -3,30 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Social Media-->
+
     <meta property="og:url" content="https://24on7store.github.io/wdd230/">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet"  href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <title>Mackison Jean Pierre - WDD230 - Web Development 1</title>
-    <!-- <link rel="icon" type="image/x-icon" href="/images/homepage.webp"> -->
 </head>
 <body>
     <header>
-        <!-- <title>Welcome to my WDD230 Projects with instructor Gerald Pierce</title> -->
+        
     <section class="pic-and-h1">
     <img class="header-image" src="images/myphoto.PNG" alt="Mackison Jean Pierre">
     <h1>Mackison Jean Pierre</h1>
     </section>
-        <!--adding a button for the hamburger menu-->
-        <!-- <button id="hamburger-button">&#8801</button> -->
 
-    <!-- <header> -->
         <nav class="navbar">
             <a href="#" class="nav-branding"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="chamber/index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Site Plan</a>
@@ -48,9 +44,7 @@
             </div>
         </nav>
     </header> 
-
-
-    <!-- <h2>WDD 230: Web Fronted Development</h2> -->
+>
     <main>
         <h2>WDD 230: Web Fronted Development</h2>
         <section class="card">  
@@ -60,7 +54,7 @@
                 <li><a href="lesson02/design-principles.html">Design Principles Documents</a></li>
                 <li><a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                 <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="lesson05/bom.html">Scripture</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
@@ -91,11 +85,6 @@
         <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20"></P>
         <p id="lastModified"></p>
     </footer>
-
-    
-  
-
-
 
     <!-- <script src="scripts/getdates.js" defer></script> -->
     <script src="scripts/hamburger-menu.js"></script>
