--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book of Mormon Favorite Chapters</title>
     <link rel="stylesheet" href="styles/bom.css">
     <title>Document</title>
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
-<main>
-	<label for="favchap">Enter Book and Chapter: </label>
-	<input type="text" id="favchap" placeholder="Alma 5">
-	<button type="submit">Add Chapter</button>
-	<ul id="list"></ul>
+    <main>
+        <label for="favchap">Enter Book and Chapter: </label>
+        <input type="text" id="favchap" placeholder="Alma 5">
+        <button>Add Chapter</button>
+        <ul id="chapterList"></ul>
+    </div>
+    
+    <script src="js/script.js"></script>
+
 </main>
 </body>
 </html>
+
