--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,9 +48,9 @@
 
     <div class="event-container">
         <div class="event">
-            <h1>Events<hr></h1>
+            <h1>Events</h1><hr>
             <h4>Ribbon Cutting - The Diamond Shack</h4>
-            <p> Join us for the grand opening of the Diamond Shack, Friday at 14:00 EST <hr></p>
+            <p> Join us for the grand opening of the Diamond Shack, Friday at 14:00 EST</p><hr>
         </div>
     
         <div class="weather">
@@ -68,7 +68,7 @@
     <div class="details-container">
 
         <div class="information1">
-            <h3>&#128659 Thankful Transport</h3>
+            <h3>&#128659; Thankful Transport</h3>
             <p>"We do it just for you"</p>
             <div class="info">
             <a href="#">hello@thankfultransport.com</a> <br>
@@ -120,7 +120,8 @@
         </div>
 
         <div class="copy-right">
-        <p><hr>Copyright &copy;2024 Grand-Goave Chamber | <strong>Mackison JEAN PIERRE</strong> | Last Modification: </p>
+        <hr>
+        <p>Copyright &copy;2024 Grand-Goave Chamber | <strong>Mackison JEAN PIERRE</strong> | Last Modification:</p>
         </div>
     </footer>
 
