--- a/index.html
+++ b/index.html
@@ -36,17 +36,31 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">Scripture</a>
                 </li>
-            </ul>
+            </ul> 
             <div class="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
         </nav>
-    </header> 
->
-    <main>
-        <h2>WDD 230: Web Fronted Development</h2>
+    </header>
+
+
+    <div>
+        <div class="hero-image">
+            <img src="images/hero3.webp" alt="the main pic">
+        </div>
+
+        <!-- <div><h2>WDD 230: Web Fronted Development</h2> <hr>
+        </div> -->
+    </div>
+    <div>
+        <h2 class="sub">WDD 230: Web Fronted Development</h2>
+    </div>
+
+        <main>
+            <!-- <div>
+            <h2 class="sub">WDD 230: Web Fronted Development</h2> <hr> </div> -->
         <section class="card">  
             <h3>Learning Activities</h3>
             <ul id="learning-activities-list">
@@ -66,7 +80,7 @@
         </section>
 
         
-        <section class="card">
+        <section class="card2">
             <h3>Information</h3>
             <p>Port-au-Prince, Haiti</p>
             <p>☀️ 21 &deg;C - Sunny</p>
@@ -74,14 +88,14 @@
         </section>
     </main>
 
+<!-- 
+    <iframe src="https://maps.app.goo.gl/PKuLNxB9bS8kas457"></iframe>-->
 
-    <iframe src="https://maps.app.goo.gl/PKuLNxB9bS8kas457"></iframe>
 
 
-
-    <footer>
-        <p>&copy; <span id="copyright"></span></p>
-        <P>Mackison Jean Pierre</P> 
+    <footer> 
+        <p>&copy; Mackison Jean Pierre <span id="copyright"></span></p>
+        <!-- <P>Mackison Jean Pierre</P>  -->
         <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20"></P>
         <p id="lastModified"></p>
     </footer>
@@ -89,7 +103,6 @@
     <!-- <script src="scripts/getdates.js" defer></script> -->
     <script src="scripts/hamburger-menu.js"></script>
     
-</iframe>
 
 </body>
 </html>
