--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Chamber Home Page Build</title>
+    <meta name="Homepage" content="This project is based on Grand-Goave Chamber">
+    <meta name="Mackison Jean Pierre" content="MJP's Homepage Project">
+    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
+    <link rel="icon" href="images/favicon.jpg">
+    <meta property="og:url" content="https://24on7store.github.io/wdd230/">
+
+
+
+
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -104,8 +114,6 @@
         <div class="footer-img">
             <img src="images/logo.webp" alt="my country">
             </div>
-            
-
             <div class="footer-info">
             <h3 class="footer-h3">Grand-Goave <br> Chamber of Commerce</h3>
             <p class="footer-p1">10 Rue Du Port Prolongé Sintra <br>
@@ -121,12 +129,23 @@
 
         <div class="copy-right">
         <hr>
-        <p>Copyright &copy;2024 Grand-Goave Chamber | <strong>Mackison JEAN PIERRE</strong> | Last Modification:</p>
+        <!-- <p>Copyright &copy;2024 Grand-Goave Chamber | <strong>Mackison JEAN PIERRE</strong> | Last Modification:</p> -->
+        <p>&copy;<span id="copyright"></span> Grand-Goave Chamber | <strong>Mackison JEAN PIERRE</strong>
+            | WDD 230 Project | <em id="lastModified"></em></p>
+    
         </div>
     </footer>
 
+    <!-- <footer> 
+        <p>&copy; Mackison Jean Pierre <span id="copyright"></span></p>
+        <P>Mackison Jean Pierre</P>
+        <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20"></P>
+        <p id="lastModified"></p>
+    </footer> -->
+
 
     <script src="scripts/hamburger-menu.js"></script>
+    <script src="scripts/getdates.js" defer></script>
 </body>
 </html>
 
