--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -38,7 +38,7 @@
 
 
             <div>
-            <img class="subpic1" src="images/subpage1.webp" alt="iamge of three people">
+            <img class="subpic1" src="images/subpage1.webp" alt="image of three people">
             <h4>Our Unique Approach</h4>
             <!-- <p class="paragraph-sub">Building house is our aim because <br>
                 once you are satisfied, we are satisfied too.</p> -->
