--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta property="og:url" content="https://24on7store.github.io/wdd230/">
+
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet"  href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -50,17 +50,12 @@
         <div class="hero-image">
             <img src="images/hero3.webp" alt="the main pic">
         </div>
-
-        <!-- <div><h2>WDD 230: Web Fronted Development</h2> <hr>
-        </div> -->
     </div>
     <div>
         <h2 class="sub">WDD 230: Web Fronted Development</h2>
     </div>
 
         <main>
-            <!-- <div>
-            <h2 class="sub">WDD 230: Web Fronted Development</h2> <hr> </div> -->
         <section class="card">  
             <h3>Learning Activities</h3>
             <ul id="learning-activities-list">
@@ -88,19 +83,13 @@
         </section>
     </main>
 
-<!-- 
-    <iframe src="https://maps.app.goo.gl/PKuLNxB9bS8kas457"></iframe>-->
-
-
-
     <footer> 
         <p>&copy; Mackison Jean Pierre <span id="copyright"></span></p>
-        <!-- <P>Mackison Jean Pierre</P>  -->
         <P>Haiti/Port-au-Prince <img src="images/haiti.jpg" alt="my country" width="20"></P>
         <p id="lastModified"></p>
     </footer>
 
-    <!-- <script src="scripts/getdates.js" defer></script> -->
+    <script src="scripts/getdates.js" defer></script>
     <script src="scripts/hamburger-menu.js"></script>
     
 
