--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>Grand-Goave Chamber of Commerce</title>
+    <!-- <title>Grand-Goave Chamber of Commerce</title> -->
+    <title>Chamber Home Page Build</title>
     <!-- Meta Description -->
-    <meta name="description" content="This project is based on Grand-Goave Chamber">
+    <!-- <meta name="description" content="This project is based on Grand-Goave Chamber"> -->
+    <meta name="description" content="This project is based on Chamber Home Page Build">
     <!-- Meta Author -->
     <meta name="author" content="Mackison Jean Pierre">
     <!-- Favorite Icon -->
     <link rel="icon" href="images/favicon.jpg">
+    
     <!-- Meta OG URL -->
-    <meta property="og:url" content="https://24on7store.github.io/wdd230/">
+    <!-- <meta property="og:url" content="https://24on7store.github.io/wdd230/"> -->
+    <meta property="og:url" content="https://24on7store.github.io/wdd230/chamber/index.html">
+
+    <meta property="og:title" content="Chamber Home Page Build" />
+
+    <meta property="og:type" content="Home page of a website" />
+
+    <meta property="og:image" content="images/chamber.webp" />
     <!-- External CSS -->
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/base.css">
