--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
     <!-- <title>Grand-Goave Chamber of Commerce</title> -->
-    <title>Chamber Home Page Build</title>
+    <title>Home page of Chamber of Commerce</title>
     <!-- Meta Description -->
     <!-- <meta name="description" content="This project is based on Grand-Goave Chamber"> -->
     <meta name="description" content="This project is based on Chamber Home Page Build">
@@ -20,9 +20,10 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
-    <meta property="og:type" content="Home page of a website" />
+    <meta property="og:type" content="website" />
 
-    <meta property="og:image" content="images/chamber.webp" />
+    <!-- <meta property="og:image" content="images/chamber.webp" /> -->
+    <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
     <!-- External CSS -->
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -30,30 +31,32 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <div class="logo">
-            <img src="images/logo.webp" alt="Temporary logo">
+<header>
+    <div class="logo">
+        <img src="images/logo.webp" alt="Temporary logo">
+    </div>
+    <div class="header-text">
+        <h1>Grand-Goave</h1>
+        <p>Chamber of Commerce</p>
+    </div>
+    <div class="social-media">
+        <img src="images/facebook.png" alt="Facebook icon">
+        <img src="images/linkedIn.webp" alt="LinkedIn icon">
+    </div>
+    <nav class="navigation-btn">
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">Discover</a>
+        <a href="#" class="nav-link">Discovery</a>
+        <a href="#" class="nav-link">Join</a>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
-        <div class="header-text">
-            <h1>Grand-Goave</h1>
-            <p>Chamber of Commerce</p>
-        </div>
-        <div class="social-media">
-            <img src="images/facebook.png" alt="Facebook icon">
-            <img src="images/linkedIn.webp" alt="LinkedIn icon">
-        </div>
-        <nav class="navigation-btn">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Discover</a>
-            <a href="#" class="nav-link">Discovery</a>
-            <a href="#" class="nav-link">Join</a>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-        </nav>
-    </header>
+    </nav>
+</header>
+
+
     <!-- Main Content -->
     <div class="join">
         <h3>Join The Chamber</h3>
