--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
-    <meta property="og:type" content="website" />
+    <meta property="og:website" content="website" />
 
     <!-- <meta property="og:image" content="images/chamber.webp" /> -->
     <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
@@ -31,30 +31,32 @@
 </head>
 <body>
     <!-- Header -->
-<header>
-    <div class="logo">
-        <img src="images/logo.webp" alt="Temporary logo">
-    </div>
-    <div class="header-text">
-        <h1>Grand-Goave</h1>
-        <p>Chamber of Commerce</p>
-    </div>
-    <div class="social-media">
-        <img src="images/facebook.png" alt="Facebook icon">
-        <img src="images/linkedIn.webp" alt="LinkedIn icon">
-    </div>
-    <nav class="navigation-btn">
-        <a href="#" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Discover</a>
-        <a href="#" class="nav-link">Discovery</a>
-        <a href="#" class="nav-link">Join</a>
-        <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+    <header>
+        
+        <div class="logo">
+            <img src="images/logo.webp" alt="Temporary logo">
         </div>
-    </nav>
-</header>
+        <div class="header-text">
+            <h1>Grand-Goave</h1>
+            <p>Chamber of Commerce</p>
+        </div>
+        <div class="social-media">
+            <img src="images/facebook.png" alt="Facebook icon">
+            <img src="images/linkedIn.webp" alt="LinkedIn icon">
+        </div>
+        <nav class="navigation-btn">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Discover</a>
+            <a href="#" class="nav-link">Discovery</a>
+            <a href="#" class="nav-link">Join</a>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
+
 
 
     <!-- Main Content -->
