--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
-    <meta property="og:website" content="website" />
+    <meta property="og:title" content="website"/>
 
     <!-- <meta property="og:image" content="images/chamber.webp" /> -->
     <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
@@ -32,7 +32,7 @@
 <body>
     <!-- Header -->
     <header>
-        
+
         <div class="logo">
             <img src="images/logo.webp" alt="Temporary logo">
         </div>
@@ -60,23 +60,27 @@
 
 
     <!-- Main Content -->
-    <div class="join">
-        <h3>Join The Chamber</h3>
-    </div>
-    <div class="main-pic">
-        <img class="extra-pic" src="images/mainphoto.webp" alt="Main photo">
-    </div>
-    <div class="event-container">
-        <div class="event">
-            <h2>Events</h2><hr>
-            <h4>Ribbon Cutting - The Diamond Shack</h4>
-            <p>Join us for the grand opening of the Diamond Shack, Friday at 14:00 EST</p><hr>
+    <main>
+
+        <div class="join">
+            <h3>Join The Chamber</h3>
         </div>
-        <div class="weather">
-            <h2>Weather</h2><hr>
-            <p class="weather-paragraph">&#9925; 33&deg;C <strong>Partly Cloudy</strong> <br> Humidity: 35% <br> Wind Chill: N/A</p>
+        <div class="main-pic">
+            <img class="extra-pic" src="images/mainphoto.webp" alt="Main photo">
         </div>
-    </div>
+        <div class="event-container">
+            <div class="event">
+                <h2>Events</h2><hr>
+                <h4>Ribbon Cutting - The Diamond Shack</h4>
+                <p>Join us for the grand opening of the Diamond Shack, Friday at 14:00 EST</p><hr>
+            </div>
+            <div class="weather">
+                <h2>Weather</h2><hr>
+                <p class="weather-paragraph">&#9925; 33&deg;C <strong>Partly Cloudy</strong> <br> Humidity: 35% <br> Wind Chill: N/A</p>
+            </div>
+        </div>
+    </main>
+
     <!-- Footer -->
     <div class="details-container">
         <!-- Information Sections -->
