--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
-    <meta property="og:type" content="website"/>
+    <!-- <meta property="og:type" content="website"/> -->
 
     <!-- <meta property="og:image" content="images/chamber.webp" /> -->
     <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
@@ -38,7 +38,7 @@
         </div>
         <div class="header-text">
             <!-- <h1>Grand-Goave</h1> -->
-            <h1>Grand-Goave <br> Chamber of Commerce</h1>
+            <h1>Grand-Goave chamber of Commerce</h1>
             <!-- <p>Chamber of Commerce</p> -->
         </div>
         <div class="social-media">
