--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
-    <!-- <meta property="og:type" content="website"/> -->
+    <meta property="og:type" content="article"/>
 
     <!-- <meta property="og:image" content="images/chamber.webp" /> -->
     <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
@@ -38,9 +38,10 @@
         </div>
         <div class="header-text">
             <!-- <h1>Grand-Goave</h1> -->
-            <h1>Grand-Goave chamber of Commerce</h1>
-            <!-- <p>Chamber of Commerce</p> -->
+            <h1>Grand-Goave</h1>
         </div>
+            <p>Chamber of Commerce</p>
+    
         <div class="social-media">
             <img src="images/facebook.png" alt="Facebook icon">
             <img src="images/linkedIn.webp" alt="LinkedIn icon">
