--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
-    <meta property="og:type" content="article"/>
+    <meta property="og:type" content="profile"/>
 
     <!-- <meta property="og:image" content="images/chamber.webp" /> -->
     <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
@@ -77,7 +77,7 @@
                 <p>Join us for the grand opening of the Diamond Shack, Friday at 14:00 EST</p><hr>
             </div>
             <div class="weather">
-                <h2>Weather</h2><hr>
+                <!-- <h2>Weather</h2><hr> -->
                 <p class="weather-paragraph">&#9925; 33&deg;C <strong>Partly Cloudy</strong> <br> Humidity: 35% <br> Wind Chill: N/A</p>
             </div>
         </div>
