--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,14 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
+    <meta property="og:type" content="website"/>
+    <meta property="og:type" content="video"/>
+    <meta property="og:type" content="image"/>
     <meta property="og:type" content="profile"/>
+    <meta property="og:type" content="music"/>
+    <meta property="og:type" content="book"/>
+    <meta property="og:type" content="product"/>
+
 
     <!-- <meta property="og:image" content="images/chamber.webp" /> -->
     <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
@@ -38,9 +45,10 @@
         </div>
         <div class="header-text">
             <!-- <h1>Grand-Goave</h1> -->
-            <h1>Grand-Goave</h1>
-        </div>
+            <h2>Grand-Goave</h2>
             <p>Chamber of Commerce</p>
+        </div>
+            
     
         <div class="social-media">
             <img src="images/facebook.png" alt="Facebook icon">
