--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
 
-    <meta property="og:type" content="website"/>
+    <!-- <meta property="og:type" content="website"/> -->
     <meta property="og:type" content="video"/>
     <meta property="og:type" content="image"/>
     <meta property="og:type" content="profile"/>
@@ -45,8 +45,8 @@
         </div>
         <div class="header-text">
             <!-- <h1>Grand-Goave</h1> -->
-            <h2>Grand-Goave</h2>
-            <p>Chamber of Commerce</p>
+            <h1>Grand-Goave Chamber of Commerce</h1>
+            <!-- <p>Chamber of Commerce</p> -->
         </div>
             
     
