--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,9 +20,9 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
     <meta property="og:type" content="video"/>
-    <!-- <meta property="og:type" content="website"/> -->
-    <!-- <meta property="og:type" content="video"/> -->
     <meta property="og:type" content="image"/>
+    <!-- <meta property="og:type" content="video"/> -->
+    <!-- <meta property="og:type" content="image"/> -->
     <meta property="og:type" content="profile"/>
     <meta property="og:type" content="music"/>
     <meta property="og:type" content="book"/>
@@ -133,7 +133,7 @@
             <img src="images/logo.webp" alt="my country">
             </div>
             <div class="footer-info">
-            <h1 class="footer-h3">Grand-Goave <br> Chamber of Commerce</h1>
+            <!-- <h1 class="footer-h3">Grand-Goave <br> Chamber of Commerce</h1> -->
             <p class="footer-p1">10 Rue Du Port Prolongé Sintra <br>
             Grand-Goave, Haiti 2000</p> 
         </div>
