--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://24on7store.github.io/wdd230/chamber/index.html">
 
     <meta property="og:title" content="Chamber Home Page Build" />
-    <meta property="og:type" content="video"/>
+    <!-- <meta property="og:type" content="video"/> -->
     <meta property="og:type" content="image"/>
     <!-- <meta property="og:type" content="video"/> -->
     <!-- <meta property="og:type" content="image"/> -->
