--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="header-text">
             <!-- <h1>Grand-Goave</h1> -->
-            <h1>Grand-Goave Chamber of Commerce</h1>
+            <!-- <h1>Grand-Goave Chamber of Commerce</h1> -->
             <!-- <p>Chamber of Commerce</p> -->
         </div>
             
