--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,10 +20,10 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
     
-    <meta property="og:type" content="image"/>
+    <meta property="og:type" content="profile"/>
     <!-- <meta property="og:type" content="video"/> -->
     <!-- <meta property="og:type" content="image"/> -->
-    <meta property="og:type" content="profile"/>
+    <!-- <meta property="og:type" content="profile"/> -->
     <meta property="og:type" content="music"/>
     <meta property="og:type" content="book"/>
     <meta property="og:type" content="product"/>
