--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="Chamber Home Page Build" />
     
-    <meta property="og:type" content="home"/>
+    <meta property="og:type" content="homepage"/>
     <!-- <meta property="og:type" content="video"/> -->
     <!-- <meta property="og:type" content="image"/> -->
     <!-- <meta property="og:type" content="profile"/> -->
@@ -44,8 +44,7 @@
             <img src="images/logo.webp" alt="Temporary logo">
         </div>
         <div class="header-text">
-            <!-- <h1>Grand-Goave</h1> -->
-            <!-- <h1>Grand-Goave Chamber of Commerce</h1> -->
+            <h1>Grand-Goave Chamber of Commerce</h1>
             <!-- <p>Chamber of Commerce</p> -->
         </div>
             
@@ -133,7 +132,7 @@
             <img src="images/logo.webp" alt="my country">
             </div>
             <div class="footer-info">
-            <!-- <h1 class="footer-h3">Grand-Goave <br> Chamber of Commerce</h1> -->
+            <!-- <h3 class="footer-h3">Grand-Goave <br> Chamber of Commerce</h3> -->
             <p class="footer-p1">10 Rue Du Port Prolongé Sintra <br>
             Grand-Goave, Haiti 2000</p> 
         </div>
