fixing the meta issue

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,10 +8,10 @@
     <meta name="author" content="Mackison Jean Pierre">
     <link rel="icon" href="images/favicon.jpg">
     <meta property="og:url" content="https://24on7store.github.io/wdd230/chamber/index.html">
-    <meta property="og:title" content="Chamber Home Page Build" />
-    <meta property="og:type" content="website" />
-    
-    <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k" />
+    <meta property="og:title" content="Chamber Home Page Build">
+    <meta property="og:type" content="website">
+
+    <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
