--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,8 +26,8 @@
             <img src="images/logo.webp" alt="Temporary logo">
         </div>
         <div class="header-text">
-            <h1>Grand-Goave</h1>
-            <p>Chamber of Commerce</p>
+            <h1>Grand-Goave Chamber of Commerce</h1>
+            <!-- <p>Chamber of Commerce</p> -->
         </div>
             
     
