--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
 
     <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k">
-    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/normalization.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
@@ -26,7 +26,7 @@
             <img src="images/logo.webp" alt="Temporary logo">
         </div>
         <div class="header-text">
-            <h1>Grand-Goave Chamber of Commerce</h1>
+            <h1>Grand-Goave <br> Chamber of Commerce</h1>
             <!-- <p>Chamber of Commerce</p> -->
         </div>
             
