--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
             <img src="images/linkedIn.webp" alt="LinkedIn icon">
         </div>
         <nav class="navigation-btn">
-            <a href="#" class="nav-link">Home</a>
+            <a href=" ../index.html" class="nav-link">Home</a>
             <a href="#" class="nav-link">Discover</a>
             <a href="#" class="nav-link">Discovery</a>
             <a href="#" class="nav-link">Join</a>
