--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <a href="#" class="nav-branding"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="chamber/index.html" class="nav-link">Home</a>
+                    <a href="#" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Site Plan</a>
+                    <a href="lesson03/chamber-site-plan.html" class="nav-link">Site Plan</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Chamber</a>
+                    <a href="chamber/index.html" class="nav-link">Chamber</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">BYU-Idaho</a>
