--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page Enhancement</title>
+    <meta name="description" content="This project is based on Home Page Enhancement">
+    <meta name="author" content="Mackison Jean Pierre">
+    <link rel="icon" href="images/favicon.jpg">
     <meta property="og:url" content="https://24on7store.github.io/wdd230/">
+    <meta property="og:title" content=" Home Page Enhancement">
+    <meta property="og:type" content="website">
 
+    <meta property="og:image" content="https://lh3.googleusercontent.com/p/AF1QipPGLTZUE7mVpy5lBUw9DgkUtUtiDiWqH0fZUF0=w600-k">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet"  href="styles/base.css">
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <title>Mackison Jean Pierre - WDD230 - Web Development 1</title>
 </head>
+
+
+
 <body>
     <header>
         
