--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page Enhancement</title>
+    <title>Mackison Jean Pierre - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="This project is based on Home Page Enhancement">
     <meta name="author" content="Mackison Jean Pierre">
     <link rel="icon" href="images/favicon.jpg">
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div>
-        <h2 class="sub">WDD 230: Web Fronted Development</h2>
+        <h1 class="sub">WDD 230: Web Fronted Development</h1>
     </div>
 
         <main>
